monticore-generator/src/test/resources/cocos/invalid/A2025/A2025.mc4
package cocos.invalid.A2025;

grammar A2025 {

  B;

  A;

  abstract A;

  enum A = "B";

  interface A;

  external A;

  token A  = "B";

  A;

  abstract A;

  enum A  = "B";

  interface A;

  external A;

  token A = "B";

}